Enum switch for abilty wheel

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -198,6 +198,9 @@ Teleport_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCat
 TextProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 PlayerController=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 Ability_Wheel_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
+HUD_Proto_C=
+Button=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
+ByteProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -221,13 +224,17 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Models/Shannon
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 
 [EditorStartup]
 LastLevel=/Game/Levels/MechanicsLevel
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
+OpenAssetsAtExit=/Game/Chloe/UI/HUD_Proto.HUD_Proto
+OpenAssetsAtExit=/Game/Widgets/Ability_Wheel.Ability_Wheel
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
+OpenAssetsAtExit=/Game/Will/AbilityEnum.AbilityEnum
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2221,6 +2228,7 @@ FbxImportUI.Transform=True
 FbxImportUI.Miscellaneous=True
 FbxImportUI.LodSettings=True
 FbxImportUI.Material=True
+Ability_Wheel_C.Default=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -2270,13 +2278,14 @@ FbxImportUI.Material=True
 /Game/GW000979/BasicTeleporter/Teleport.Teleport=1
 /Game/Widgets/Ability_Wheel.Ability_Wheel=0
 /Game/Chloe/UI/HUD_Proto.HUD_Proto=0
+/Game/TopDownBP/Interactexample/Door.Door=0
 
 [PluginBrowser]
 InstalledPlugins=Substance
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object=
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
@@ -2289,8 +2298,8 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIbot_C=
-Character="\"Object.IsMenuActive\" \"Object.IsMenuActive\" "
-Pawn="\"Object.IsMenuActive\" \"Object.IsMenuActive\" "
+Character="\"Object.Mesh\" \"Object.Mesh\" "
+Pawn="\"Object.Mesh\" \"Object.Mesh\" "
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_AIbot_C_376="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 Perception_C=
@@ -2304,7 +2313,7 @@ NewController_C="\"Object.Controller.Controller"
 AIController="\"Object.Default.DebugColour\" "
 Controller=
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-TopDownCharacter_C="\"Object.IsMenuActive\" \"Object.IsMenuActive\" "
+TopDownCharacter_C="\"Object.Mesh\" \"Object.Mesh\" "
 REINST_TestPawn_C_585="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_603="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_609="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -2340,13 +2349,13 @@ Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Objec
 Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PlayerController=
-Button="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout"
-ContentWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout"
+Button="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout"
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout"
-Ability_Wheel_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Ability_Wheel_C="\"Object.Player Ref\" \"Object.Player Ref\" "
 UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HUD_Proto_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 
@@ -3089,7 +3098,7 @@ WeldedVertices=True
 MapSkeletalMotionToRoot=False
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=PIE
 
 [PathColor]
 /Game/Levels=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
@@ -3166,26 +3175,26 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Widgets/Ability_Wheel
-MRUItem1=/Game/Chloe/UI/HUD_Proto
-MRUItem2=/Game/Levels/MechanicsLevel
-MRUItem3=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem4=/Game/AIAgent/AIbot
-MRUItem5=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem6=/Game/SpawnActor/SpawnPoint
-MRUItem7=/Game/GW000979/BasicTeleporter/Teleport
-MRUItem8=/Game/TopDownBP/Interactexample/Door
-MRUItem9=/Game/TopDownBP/Interactexample/Switch
-MRUItem10=/Game/AIAgent/AttackPlayer
-MRUItem11=/Game/AIAgent/ProtoTree
-MRUItem12=/Game/AIAgent/Proto_controller
-MRUItem13=/Game/GW000979/DataStruct/TargetDummy/TargetDummy
-MRUItem14=/Game/AIAgent/I_Damage
-MRUItem15=/Game/AIAgent/TargetInterface
-MRUItem16=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem17=/Game/GW000979/DataStruct/BaseWeapon
-MRUItem18=/Game/GW000979/DataStruct/TargetDummy/TestDrop
-MRUItem19=/Game/GW000979/DataStruct/Weapon_Struct
+MRUItem0=/Game/Levels/MechanicsLevel
+MRUItem1=/Game/Will/AbilityEnum
+MRUItem2=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem3=/Game/Widgets/Ability_Wheel
+MRUItem4=/Game/Chloe/UI/HUD_Proto
+MRUItem5=/Game/TopDownBP/Interactexample/Door
+MRUItem6=/Game/AIAgent/AIbot
+MRUItem7=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem8=/Game/SpawnActor/SpawnPoint
+MRUItem9=/Game/GW000979/BasicTeleporter/Teleport
+MRUItem10=/Game/TopDownBP/Interactexample/Switch
+MRUItem11=/Game/AIAgent/AttackPlayer
+MRUItem12=/Game/AIAgent/ProtoTree
+MRUItem13=/Game/AIAgent/Proto_controller
+MRUItem14=/Game/GW000979/DataStruct/TargetDummy/TargetDummy
+MRUItem15=/Game/AIAgent/I_Damage
+MRUItem16=/Game/AIAgent/TargetInterface
+MRUItem17=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem18=/Game/GW000979/DataStruct/BaseWeapon
+MRUItem19=/Game/GW000979/DataStruct/TargetDummy/TestDrop
 
 [WidgetTemplatesExpanded]
 Extra=False
