Part done drop system

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -178,7 +178,7 @@ Perception_C=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultV
 StructProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 BoolProperty=
 ArrayProperty=
-IntProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+IntProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 K2Node_VariableSet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 BaseWeapon_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 UserDefinedStruct=
@@ -198,6 +198,12 @@ Teleport_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCat
 TextProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 PlayerController=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 Ability_Wheel_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
+Random Number=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
+BaseWeapon_2_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
+WeaponDropHuman_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
+Weapon Set Up=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
+ClassProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
+BaseArmour_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -221,13 +227,19 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Models/Shannon
+ContentBrowserTab1.SelectedPaths=/Game/GW000979/DataStruct/Structs
 
 [EditorStartup]
 LastLevel=/Game/Levels/MechanicsLevel
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
+OpenAssetsAtExit=/Game/GW000979/Weapons/WeaponDropMonster.WeaponDropMonster
+OpenAssetsAtExit=/Game/GW000979/Weapons/WeaponDropAnimal.WeaponDropAnimal
+OpenAssetsAtExit=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon.BaseWeapon
+OpenAssetsAtExit=/Game/GW000979/Weapons/WeaponDropHuman.WeaponDropHuman
+OpenAssetsAtExit=/Game/AIAgent/AIbot.AIbot
+OpenAssetsAtExit=/Game/GW000979/DataStruct/BaseEquipment/BaseArmour.BaseArmour
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2221,6 +2233,71 @@ FbxImportUI.Transform=True
 FbxImportUI.Miscellaneous=True
 FbxImportUI.LodSettings=True
 FbxImportUI.Material=True
+BasePickup_C.Tick=True
+BasePickup_C.Default=True
+BasePickup_C.Rendering=True
+BasePickup_C.Replication=True
+BasePickup_C.Input=True
+BasePickup_C.Actor=True
+REINST_AIbot_C_237.Variable=True
+REINST_AIbot_C_237.TransformCommon=True
+REINST_AIbot_C_237.Sockets=True
+REINST_AIbot_C_237.Shape=True
+REINST_AIbot_C_237.Navigation=True
+REINST_AIbot_C_237.Rendering=True
+REINST_AIbot_C_237.Physics=True
+REINST_AIbot_C_237.Collision=True
+REINST_AIbot_C_237.Tags=True
+REINST_AIbot_C_237.ComponentReplication=True
+REINST_AIbot_C_237.Cooking=True
+REINST_AIbot_C_237.Events=True
+REINST_AIbot_C_243.Variable=True
+REINST_AIbot_C_243.TransformCommon=True
+REINST_AIbot_C_243.Sockets=True
+REINST_AIbot_C_243.Shape=True
+REINST_AIbot_C_243.Navigation=True
+REINST_AIbot_C_243.Rendering=True
+REINST_AIbot_C_243.Physics=True
+REINST_AIbot_C_243.Collision=True
+REINST_AIbot_C_243.Tags=True
+REINST_AIbot_C_243.ComponentReplication=True
+REINST_AIbot_C_243.Cooking=True
+REINST_AIbot_C_243.Events=True
+ClassProperty.Variable=True
+ClassProperty.DefaultValueCategory=True
+BasePickup_C.TransformCommon=True
+BaseWeapon_2_C.Tick=True
+BaseWeapon_2_C.Default=True
+BaseWeapon_2_C.Rendering=True
+BaseWeapon_2_C.Replication=True
+BaseWeapon_2_C.Input=True
+BaseWeapon_2_C.Actor=True
+WeaponDropHuman_C.Tick=True
+WeaponDropHuman_C.Default=True
+WeaponDropHuman_C.Rendering=True
+WeaponDropHuman_C.Replication=True
+WeaponDropHuman_C.Input=True
+WeaponDropHuman_C.Actor=True
+K2Node_CallParentFunction.Graph=True
+WeaponDropHuman_C.TransformCommon=True
+WeaponDropAnimal_C.Tick=True
+WeaponDropAnimal_C.Default=True
+WeaponDropAnimal_C.Rendering=True
+WeaponDropAnimal_C.Replication=True
+WeaponDropAnimal_C.Input=True
+WeaponDropAnimal_C.Actor=True
+WeaponDropMonster_C.Tick=True
+WeaponDropMonster_C.Default=True
+WeaponDropMonster_C.Rendering=True
+WeaponDropMonster_C.Replication=True
+WeaponDropMonster_C.Input=True
+WeaponDropMonster_C.Actor=True
+BaseArmour_C.Tick=True
+BaseArmour_C.Rendering=True
+BaseArmour_C.Replication=True
+BaseArmour_C.Input=True
+BaseArmour_C.Actor=True
+Armour_Struct.None=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -2270,13 +2347,18 @@ FbxImportUI.Material=True
 /Game/GW000979/BasicTeleporter/Teleport.Teleport=1
 /Game/Widgets/Ability_Wheel.Ability_Wheel=0
 /Game/Chloe/UI/HUD_Proto.HUD_Proto=0
+/Game/TopDownBP/Interfaces/I_useable.I_useable=1
+/Game/c024816h/PickUpInterface.PickUpInterface=1
+/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon_2.BaseWeapon_2=0
+/Game/GW000979/DataStruct/Structs/Armour_Struct.Armour_Struct=1
+/Game/GW000979/DataStruct/DataTables/ArmourDataTable.ArmourDataTable=1
 
 [PluginBrowser]
 InstalledPlugins=Substance
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
@@ -2289,8 +2371,8 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIbot_C=
-Character="\"Object.IsMenuActive\" \"Object.IsMenuActive\" "
-Pawn="\"Object.IsMenuActive\" \"Object.IsMenuActive\" "
+Character=
+Pawn=
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_AIbot_C_376="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 Perception_C=
@@ -2304,7 +2386,7 @@ NewController_C="\"Object.Controller.Controller"
 AIController="\"Object.Default.DebugColour\" "
 Controller=
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-TopDownCharacter_C="\"Object.IsMenuActive\" \"Object.IsMenuActive\" "
+TopDownCharacter_C=
 REINST_TestPawn_C_585="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_603="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_609="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -2349,6 +2431,11 @@ TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font
 Ability_Wheel_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HUD_Proto_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+REINST_AIbot_C_243="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+BaseWeapon_2_C="\"Object.NewVar_0\" \"Object.NewVar_0\" "
+WeaponDropHuman_C=
+Weapon Set Up="\"Struct.MaxRow\" "
+BaseArmour_C=
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -2374,7 +2461,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/s017290g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
+UNR=../../../../../../Users/gw000979/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBX=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBXAnim=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -3096,6 +3183,8 @@ LastLogListing=LoadErrors
 /Game/Materials=(R=0.500000,G=0.240541,B=0.050361,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/GW000979/Weapons/WeaponDropHuman.WeaponDropHuman;
+RecentlyPlaced=/Game/GW000979/DataStruct/BaseEquipment/BasePickup.BasePickup;
 RecentlyPlaced=/Game/Models/Shannon/body_WIP.body_WIP;
 RecentlyPlaced=/Game/GW000979/BasicTeleporter/Teleport.Teleport;
 RecentlyPlaced=/Game/GW000979/BasicTeleporter/TeleportOut.TeleportOut;
@@ -3111,11 +3200,9 @@ RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDir
 RecentlyPlaced=/Game/GW000979/ShaneToyeSprintTest.ShaneToyeSprintTest;
 RecentlyPlaced=/Game/GW000979/TopDownCharacterTest.TopDownCharacterTest;
 RecentlyPlaced=/Game/GW000979/DataStruct/TargetDummy/TestDrop.TestDrop;
-RecentlyPlaced=/Game/GW000979/DataStruct/BaseWeapon.BaseWeapon;
+RecentlyPlaced=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon.BaseWeapon;
 RecentlyPlaced=/Game/AIAgent/TestPawn.TestPawn;
 RecentlyPlaced=/Game/AIAgent/TestPawn2.TestPawn2;
-RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_14
-RecentlyPlaced=/Game/Geometry/Meshes/GrassMesh.GrassMesh;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -3166,26 +3253,26 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Widgets/Ability_Wheel
-MRUItem1=/Game/Chloe/UI/HUD_Proto
-MRUItem2=/Game/Levels/MechanicsLevel
-MRUItem3=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem4=/Game/AIAgent/AIbot
-MRUItem5=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem6=/Game/SpawnActor/SpawnPoint
-MRUItem7=/Game/GW000979/BasicTeleporter/Teleport
-MRUItem8=/Game/TopDownBP/Interactexample/Door
-MRUItem9=/Game/TopDownBP/Interactexample/Switch
-MRUItem10=/Game/AIAgent/AttackPlayer
-MRUItem11=/Game/AIAgent/ProtoTree
-MRUItem12=/Game/AIAgent/Proto_controller
-MRUItem13=/Game/GW000979/DataStruct/TargetDummy/TargetDummy
-MRUItem14=/Game/AIAgent/I_Damage
-MRUItem15=/Game/AIAgent/TargetInterface
-MRUItem16=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem17=/Game/GW000979/DataStruct/BaseWeapon
-MRUItem18=/Game/GW000979/DataStruct/TargetDummy/TestDrop
-MRUItem19=/Game/GW000979/DataStruct/Weapon_Struct
+MRUItem0=/Game/GW000979/DataStruct/Structs/Armour_Struct
+MRUItem1=/Game/GW000979/DataStruct/DataTables/ArmourDataTable
+MRUItem2=/Game/GW000979/DataStruct/BaseEquipment/BaseArmour
+MRUItem3=/Game/AIAgent/AIbot
+MRUItem4=/Game/GW000979/Weapons/WeaponDropMonster
+MRUItem5=/Game/GW000979/Weapons/WeaponDropAnimal
+MRUItem6=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon
+MRUItem7=/Game/GW000979/Weapons/WeaponDropHuman
+MRUItem8=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon_2
+MRUItem9=/Game/GW000979/DataStruct/BaseEquipment/BasePickup
+MRUItem10=/Game/c024816h/PickUpInterface
+MRUItem11=/Game/TopDownBP/Interfaces/I_useable
+MRUItem12=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem13=/Game/Levels/MechanicsLevel
+MRUItem14=/Game/Widgets/Ability_Wheel
+MRUItem15=/Game/Chloe/UI/HUD_Proto
+MRUItem16=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem17=/Game/SpawnActor/SpawnPoint
+MRUItem18=/Game/GW000979/BasicTeleporter/Teleport
+MRUItem19=/Game/TopDownBP/Interactexample/Door
 
 [WidgetTemplatesExpanded]
 Extra=False
@@ -3212,6 +3299,7 @@ CoordSystem=1
 
 [SuppressableDialogs]
 ExtrudeCoordsWarning=False
+ChangeVariableType_Warning=False
 
 [/Script/UnrealEd.FbxImportUI]
 LodDistance0=0.000000
