--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -199,6 +199,7 @@ TextProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueC
 PlayerController=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 Ability_Wheel_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 RangeFinder_C=
+ChoseAttackPattern_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -229,14 +230,6 @@ LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/AIAgent/HybridAttacker.HybridAttacker
-OpenAssetsAtExit=/Game/AIAgent/ProtoAI.ProtoAI
-OpenAssetsAtExit=/Game/AIAgent/DerivedClasses/RangedAI.RangedAI
-OpenAssetsAtExit=/Game/AIAgent/DerivedClasses/HybridAI.HybridAI
-OpenAssetsAtExit=/Game/AIAgent/BTService_BlueprintBase_New.BTService_BlueprintBase_New
-OpenAssetsAtExit=/Game/AIAgent/AttackPlayer.AttackPlayer
-OpenAssetsAtExit=/Game/AIAgent/Perception.Perception
-OpenAssetsAtExit=/Game/AIAgent/RangeFinder.RangeFinder
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2325,11 +2318,82 @@ RangedController_C.Controller=True
 RangedController_C.Replication=True
 RangedController_C.Input=True
 RangedController_C.Actor=True
+ChoseAttackPattern_C.Description=True
+ChoseAttackPattern_C.Service=True
+CheckPlayerDead_C.Default=True
+CheckPlayerDead_C.Description=True
+CheckPlayerDead_C.Task=True
+CheckTargetDead_C.Default=True
+CheckTargetDead_C.Description=True
+CheckTargetDead_C.Service=True
+ChoseAttackPattern_C.Default=True
+K2Node_SwitchInteger.PinOptions=True
+HybridAI_C.Character Movement: Jumping / Falling=True
+HybridAI_C.Character Movement (General Settings)=True
+HybridAI_C.Character Movement: Walking=True
+HybridAI_C.Character Movement: Swimming=True
+HybridAI_C.Character Movement: Flying=True
+HybridAI_C.Character Movement: Custom Movement=True
+HybridAI_C.Character Movement (Rotation Settings)=True
+HybridAI_C.Character Movement: Physics Interaction=True
+HybridAI_C.Character Movement (Networking)=True
+HybridAI_C.Character Movement=True
+HybridAI_C.Character Movement: Avoidance=True
+HybridAI_C.Character Movement: NavMesh Movement=True
+HybridAI_C.RootMotion=True
+HybridAI_C.NavMovement=True
+HybridAI_C.Velocity=True
+HybridAI_C.PlanarMovement=True
+HybridAI_C.MovementComponent=True
+HybridAI_C.Shape=True
+HybridAI_C.Navigation=True
+REINST_HybridAI_C_146.TransformCommon=True
+REINST_HybridAI_C_146.Animation=True
+REINST_HybridAI_C_146.Mesh=True
+REINST_HybridAI_C_146.Default=True
+REINST_HybridAI_C_146.Physics=True
+REINST_HybridAI_C_146.Clothing=True
+REINST_HybridAI_C_146.Collision=True
+REINST_HybridAI_C_146.Lighting=True
+REINST_HybridAI_C_146.ClothingSimulation=True
+REINST_HybridAI_C_146.Rendering=True
+REINST_HybridAI_C_146.Tags=True
+REINST_HybridAI_C_146.Activation=True
+REINST_HybridAI_C_146.Cooking=True
+REINST_HybridAI_C_146.Character Movement: Jumping / Falling=True
+REINST_HybridAI_C_146.Character Movement (General Settings)=True
+REINST_HybridAI_C_146.Character Movement: Walking=True
+REINST_HybridAI_C_146.Character Movement: Swimming=True
+REINST_HybridAI_C_146.Character Movement: Flying=True
+REINST_HybridAI_C_146.Character Movement: Custom Movement=True
+REINST_HybridAI_C_146.Character Movement (Rotation Settings)=True
+REINST_HybridAI_C_146.Character Movement: Physics Interaction=True
+REINST_HybridAI_C_146.Character Movement (Networking)=True
+REINST_HybridAI_C_146.Character Movement=True
+REINST_HybridAI_C_146.Character Movement: Avoidance=True
+REINST_HybridAI_C_146.Character Movement: NavMesh Movement=True
+REINST_HybridAI_C_146.RootMotion=True
+REINST_HybridAI_C_146.NavMovement=True
+REINST_HybridAI_C_146.Velocity=True
+REINST_HybridAI_C_146.PlanarMovement=True
+REINST_HybridAI_C_146.MovementComponent=True
+REINST_HybridAI_C_146.Shape=True
+REINST_HybridAI_C_146.Navigation=True
+REINST_HybridAI_C_146.Character=True
+REINST_HybridAI_C_146.Camera=True
+REINST_HybridAI_C_146.Pawn=True
+REINST_HybridAI_C_146.Input=True
+REINST_HybridAI_C_146.Actor=True
+REINST_HybridAI_C_146.Tick=True
+REINST_HybridAI_C_146.Replication=True
+MoveWithinRange_C.Default=True
+MoveWithinRange_C.Description=True
+MoveWithinRange_C.Task=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
 /Game/AIAgent/TargetInterface.TargetInterface=0
-/Game/AIAgent/ProtoAI.ProtoAI=0
+/Game/AIAgent/ProtoAI.ProtoAI=1
 /Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton.UE4_Mannequin_Skeleton=0
 /Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter=0
 /Game/Materials/BlueGreen.BlueGreen=0
@@ -2379,6 +2443,13 @@ RangedController_C.Actor=True
 /Game/AIAgent/RangedController.RangedController=0
 /Game/AIAgent/HybridController.HybridController=0
 /Game/AIAgent/RangedTree.RangedTree=0
+/Game/AIAgent/CheckPlayerDead.CheckPlayerDead=0
+/Game/AIAgent/CheckTargetDead.CheckTargetDead=0
+/Game/AIAgent/DerivedClasses/HybridAI.HybridAI=0
+/Game/AIAgent/RangeFinder.RangeFinder=0
+/Game/AIAgent/HybridAttacker.HybridAttacker=1
+/Game/AIAgent/MoveWithinRange.MoveWithinRange=0
+/Game/AIAgent/ChoseAttackPattern.ChoseAttackPattern=0
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -2402,7 +2473,7 @@ Character=
 Pawn=
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_AIbot_C_376="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-Perception_C="\"Object.TargetEnemy\" \"Object.TargetEnemy\" "
+Perception_C=
 BTService_BlueprintBase=
 BTService=
 BTAuxiliaryNode=
@@ -2459,12 +2530,13 @@ Ability_Wheel_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"
 UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HUD_Proto_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HybridController_C="\"Object.Default.DebugColour\" "
-BehaviorTreeGraphNode_Root="\"Object.AI.AI|BehaviorTree\" "
-BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
-AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
-EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
+BehaviorTreeGraphNode_Root=
+BehaviorTreeGraphNode=
+AIGraphNode=
+EdGraphNode=
 RangeFinder_C=
 RangedController_C="\"Object.Default.DebugColour\" "
+ChoseAttackPattern_C="\"Object.Melee\" \"Object.Melee\" "
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -3214,6 +3286,7 @@ LastLogListing=PIE
 /Game/Materials=(R=0.500000,G=0.240541,B=0.050361,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/AIAgent/DerivedClasses/HybridAI.HybridAI;
 RecentlyPlaced=/Game/AIAgent/DerivedClasses/RangedAI.RangedAI;
 RecentlyPlaced=/Game/Models/Shannon/body_WIP.body_WIP;
 RecentlyPlaced=/Game/GW000979/BasicTeleporter/Teleport.Teleport;
@@ -3233,7 +3306,6 @@ RecentlyPlaced=/Game/GW000979/DataStruct/TargetDummy/TestDrop.TestDrop;
 RecentlyPlaced=/Game/GW000979/DataStruct/BaseWeapon.BaseWeapon;
 RecentlyPlaced=/Game/AIAgent/TestPawn.TestPawn;
 RecentlyPlaced=/Game/AIAgent/TestPawn2.TestPawn2;
-RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -3284,26 +3356,26 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AIAgent/BTService_BlueprintBase_New
-MRUItem1=/Game/AIAgent/HybridAttacker
-MRUItem2=/Game/AIAgent/Proto_controller
-MRUItem3=/Game/AIAgent/AIController_I
-MRUItem4=/Game/AIAgent/RangedController
-MRUItem5=/Game/AIAgent/RangeFinder
-MRUItem6=/Game/AIAgent/Perception
-MRUItem7=/Game/AIAgent/AttackPlayer
-MRUItem8=/Game/AIAgent/HybridController
-MRUItem9=/Game/AIAgent/DerivedClasses/HybridAI
-MRUItem10=/Game/Models/Shannon/body_WIP
-MRUItem11=/Game/AIAgent/DerivedClasses/RangedAI
-MRUItem12=/Game/AIAgent/RangedTree
-MRUItem13=/Game/Widgets/Ability_Wheel
-MRUItem14=/Game/Chloe/UI/HUD_Proto
-MRUItem15=/Game/Levels/MechanicsLevel
-MRUItem16=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem17=/Game/AIAgent/AIbot
-MRUItem18=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem19=/Game/SpawnActor/SpawnPoint
+MRUItem0=/Game/AIAgent/MoveWithinRange
+MRUItem1=/Game/AIAgent/RangeFinder
+MRUItem2=/Game/AIAgent/HybridController
+MRUItem3=/Game/AIAgent/DerivedClasses/HybridAI
+MRUItem4=/Game/AIAgent/Perception
+MRUItem5=/Game/AIAgent/RangedTree
+MRUItem6=/Game/AIAgent/CheckTargetDead
+MRUItem7=/Game/AIAgent/CheckPlayerDead
+MRUItem8=/Game/AIAgent/ChoseAttackPattern
+MRUItem9=/Game/AIAgent/HybridAttacker
+MRUItem10=/Game/AIAgent/BTService_BlueprintBase_New
+MRUItem11=/Game/AIAgent/Proto_controller
+MRUItem12=/Game/AIAgent/AIController_I
+MRUItem13=/Game/AIAgent/RangedController
+MRUItem14=/Game/AIAgent/AttackPlayer
+MRUItem15=/Game/Models/Shannon/body_WIP
+MRUItem16=/Game/AIAgent/DerivedClasses/RangedAI
+MRUItem17=/Game/Widgets/Ability_Wheel
+MRUItem18=/Game/Chloe/UI/HUD_Proto
+MRUItem19=/Game/Levels/MechanicsLevel
 
 [WidgetTemplatesExpanded]
 Extra=False
