--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -16,6 +16,7 @@ bSCSEditorShowFloor=False
 SCSViewportCameraSpeed=4
 AssetViewerProfileName=
 MaterialQualityLevel=1
+bAllowSelectTranslucent=False
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=False,ProfileName="")
@@ -104,8 +105,8 @@ CurrentPosGridSize=1
 CurrentScalingGridSize=4
 
 [MRU]
-MRUItem0=/Game/Levels/BlockOut
-MRUItem1=/Game/Levels/terrain_test
+MRUItem0=/Game/Levels/terrain_test
+MRUItem1=/Game/Levels/BlockOut
 MRUItem2=/Game/Levels/assetlayout
 MRUItem3=/Game/Levels/Terrain-Test
 MRUItem4=/Game/Levels/test
@@ -201,14 +202,13 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Models/Jack
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 
 [EditorStartup]
-LastLevel=/Game/Levels/BlockOut
+LastLevel=/Engine/Maps/Templates/Template_Default
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -1239,7 +1239,6 @@ AssetViewerSettings.Film=False
 /Game/Models/David/02_-_Default.02_-_Default=1
 /Game/Models/Ben/02_-_Default.02_-_Default=1
 /Game/Models/Ben/small_bush.small_bush=1
-/Game/Models/Dylan/Pickaxe_Dylan_10-01-19.Pickaxe_Dylan_10-01-19=1
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -2027,14 +2026,6 @@ LastLogListing=FBXImport
 /Game/Models=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
 
 [PlacementMode]
-RecentlyPlaced=/Game/Models/Jack/Cure_Potion_Large.Cure_Potion_Large;
-RecentlyPlaced=/Game/Models/Jack/Cure_Potion_Med.Cure_Potion_Med;
-RecentlyPlaced=/Game/Models/Jack/Cure_Potion_Small.Cure_Potion_Small;
-RecentlyPlaced=/Game/Models/Jack/Life_Potion.Life_Potion;
-RecentlyPlaced=/Game/Models/Jack/Potion_Large.Potion_Large;
-RecentlyPlaced=/Game/Models/Jack/Potion_med.Potion_med;
-RecentlyPlaced=/Game/Models/Jack/Potion_Small.Potion_Small;
-RecentlyPlaced=/Game/Models/Jack/Rage_Potion.Rage_Potion;
 RecentlyPlaced=/Game/Materials/Water.Water;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
@@ -2047,6 +2038,14 @@ RecentlyPlaced=/Game/Models/Ben/large_cactus.large_cactus;
 RecentlyPlaced=/Game/Models/Ben/small_cactus.small_cactus;
 RecentlyPlaced=/Game/Models/Ben/large_bush.large_bush;
 RecentlyPlaced=/Game/Models/David/LP_foliage.LP_foliage;
+RecentlyPlaced=/Game/Models/David/LP_Palm_tree.LP_Palm_tree;
+RecentlyPlaced=/Game/Models/David/LP_barrel.LP_barrel;
+RecentlyPlaced=/Game/Models/David/Material_005.Material_005;
+RecentlyPlaced=/Game/Models/David/Material_002.Material_002;
+RecentlyPlaced=/Game/Models/David/Palm_tree_UVChannel_1_color_Mat.Palm_tree_UVChannel_1_color_Mat;
+RecentlyPlaced=/Game/Models/David/Palm_tree_UVChannel_1_color.Palm_tree_UVChannel_1_color;
+RecentlyPlaced=/Game/Models/Andrew/scaffold01-andrew-11-01-19.scaffold01-andrew-11-01-19;
+RecentlyPlaced=/Script/Engine.Character;/Engine/Transient.ActorFactoryCharacter_0
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -2199,26 +2198,26 @@ ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
 ImportUniformScale=1.000000
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Models/Dylan/Pickaxe_Dylan_10-01-19
-MRUItem1=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem2=/Game/Levels/BlockOut
-MRUItem3=/Game/Levels/terrain_test
-MRUItem4=/Game/Models/Ben/small_bush
-MRUItem5=/Game/Models/Ben/02_-_Default
-MRUItem6=/Game/Models/David/LP_foliage
-MRUItem7=/Game/Models/David/02_-_Default
-MRUItem8=/Game/Models/David/LP_Palm_tree
-MRUItem9=/Game/Models/David/crate-david-14-01-19
-MRUItem10=/Game/Models/David/LP_barrel
-MRUItem11=/Game/Models/David/Material_005
-MRUItem12=/Game/Models/David/Material_002
-MRUItem13=/Game/Models/David/Palm_tree_UVChannel_1_color_Mat
-MRUItem14=/Game/Levels/assetlayout
-MRUItem15=/Game/Levels/test
-MRUItem16=/Game/Materials/white
-MRUItem17=/Game/Levels/Assetslayout
-MRUItem18=/Game/Models/Jack/Rock_Form_1
-MRUItem19=/Game/Models/Jack/Rock_Form_2
+MRUItem0=/Game/Levels/terrain_test
+MRUItem1=/Game/Levels/BlockOut
+MRUItem2=/Game/Models/Ben/small_bush
+MRUItem3=/Game/Models/Ben/02_-_Default
+MRUItem4=/Game/Models/David/LP_foliage
+MRUItem5=/Game/Models/David/02_-_Default
+MRUItem6=/Game/Models/David/LP_Palm_tree
+MRUItem7=/Game/Models/David/crate-david-14-01-19
+MRUItem8=/Game/Models/David/LP_barrel
+MRUItem9=/Game/Models/David/Material_005
+MRUItem10=/Game/Models/David/Material_002
+MRUItem11=/Game/Models/David/Palm_tree_UVChannel_1_color_Mat
+MRUItem12=/Game/Levels/assetlayout
+MRUItem13=/Game/Levels/test
+MRUItem14=/Game/Materials/white
+MRUItem15=/Game/Levels/Assetslayout
+MRUItem16=/Game/Models/Jack/Rock_Form_1
+MRUItem17=/Game/Models/Jack/Rock_Form_2
+MRUItem18=/Game/Models/Jack/Rock_Form_3
+MRUItem19=/Game/Models/David/diffuse
 
 [/Script/UnrealEd.FbxImportUI]
 LodDistance0=0.000000
